fix some bugs: - slip command response undefined, Ref https://github.com/SilveryStar/Adachi-BOT/issues/109 - char command query error, Ref https://github.com/SilveryStar/Adachi-BOT/issues/108 - auto clear images cache error, Ref https://github.com/SilveryStar/Adachi-BOT/issues/112 - link for how to get cookie is 404, Ref https://github.com/SilveryStar/Adachi-BOT/issues/111#issue-1060851753 - help message show not displayed command desc - cannot catch global rejection - web-console log info cannot wrap

--- a/src/web-console/style/view/log.css
+++ b/src/web-console/style/view/log.css
@@ -125,6 +125,7 @@
 
 .log-container .content-line span {
 	user-select: inherit;
+	white-space: pre-wrap;
 }
 
 .log-scroll-container {
